implemented fabric data gen, added iron crop

--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.firstmod.poop_armor_chestplate": "Poop Chestplate",
   "item.firstmod.poop_armor_leggings": "Poop Leggings",
   "item.firstmod.poop_armor_boots": "Poop Boots",
+  "item.firstmod.iron_seed": "Iron Seed",
   "block.firstmod.poop_bricks": "Poop Bricks",
   "block.firstmod.lightning_block": "Lightning Block",
   "block.firstmod.poop_bricks.test_message": "You touched a poop bricks...",
